# Multiplatform_screen_grabber

./: .gitignore  Cargo.toml  README.md
src/: convention_window.rs  drawing_area.rs  function.rs  information_window.rs  main.rs  screenshot.rs  shortkeys_window.rs  window_format.rs
